apps/production/monitoring/grafana/grafana-ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  tls:
  # The patches in kustomize are ugly here (the patch is basically the whole Ingress). This could probably be made cleaner using a configMap + configMapGenerator or something to grab these values from a simple property file or labels or something
  - hosts:
      - grafana.activescott.com # e.g. photos.example.com
    # secretName must match the Certificate resource's secretName
    secretName: grafana-activescott-com-cert #e.g. cert-example-com
  rules:
  # don't forget to set this up in DNS
  - host: grafana.activescott.com # e.g. photos.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Service created by the grafana Helm chart
            name: grafana
            port:
              number: 80
